# simple-diffusion-transformer

./: .gitignore  Dockerfile  LICENSE  README.md  eval.py  model.py  pyproject.toml  train.py
.github/workflows/: ci.yml
tests/: test_model.py
