[project]
name = "simple-diffusion-transformer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers>=0.36.0",
    "ruff>=0.14.9",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
    "transformers>=4.57.3",
    "torchmetrics>=1.6.1",
    "torch-fidelity>=0.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
